--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
 <body>
 
  <!-- navigation code here -->
+<div class="top">
+<h1>SpaceWalkers</h1>
+
+<nav class="nav">
+  <a href="#home">Home</a>
+  <a href="#about">About Us</a>
+  <a href="#blog">Blog</a>
+  <a href="#contact">Contact</a>
+  <a href="#sign">Sign In</a>
+</nav>
+
+</div>
+<div class="topimg">
+  <img src="img/main-header.png" class="img" alt="">
+</div>
+
+
+
 
   <div class="container home">
 
